# mcp-weixin-spider

./: .gitignore  README.md  README_CN.md  cursor-mcp-config.json  pyproject.toml  query.py  requirements.txt  test_urls.txt  weixin_spider_agentbrowser.py  weixin_spider_simple.py
configs/: cursor-mcp.json
skills/: weixin-auth-flow.md
src/mcp_weixin_spider/: __init__.py  client.py  server.py
