[project]
name = "mcp-weixin-spider"
version = "0.1.0"
description = "MCP server for crawling WeChat public account articles - enables AI to directly read WeChat content"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Alan Xu", email = "alan@example.com" }
]
keywords = [
    "mcp",
    "weixin",
    "wechat",
    "spider",
    "crawler",
    "ai",
    "llm",
    "claude",
    "cursor"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/alanxurox/mcp-weixin-spider"
Repository = "https://github.com/alanxurox/mcp-weixin-spider"
Issues = "https://github.com/alanxurox/mcp-weixin-spider/issues"

[project.scripts]
mcp-weixin = "mcp_weixin_spider.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_weixin_spider"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
